--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,14 @@
     "name": "leliem523/package-class",
     "description": "Manage class",
     "keywords": [
-        "foostart",
+        "leliem523",
         "laravel 5 package class"
     ],
     "authors": [
         {
-            "name": "FooStart",
-            "email": "foostart.com@gmail.com",
-            "homepage": "http://foostart.com"
+            "name": "leliem523",
+            "email": "leliem523.com@gmail.com",
+            "homepage": "http://leliem523.com"
         }
     ],
     "license": "MIT",
