--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     "authors": [
         {
             "name": "leliem523",
-            "email": "leliem523.com@gmail.com",
-            "homepage": "http://leliem523.com"
+            "email": "dragking005@gmail.com"
         }
     ],
     "license": "MIT",
