--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "authors": [
         {
             "name": "leliem523",
-            "email": "dragking005@gmail.com"
+            "email": "dragking005@gmail.com",
+            "homepage": ""
         }
     ],
     "license": "MIT",
