--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     "authors": [
         {
             "name": "leliem523",
-            "email": "leliem523.com@gmail.com",
-            "homepage": "http://leliem523.com"
+            "email": "liem29012001@gmail.com",
+            "homepage": ""
         }
     ],
     "license": "MIT",
