--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "leliem523",
-            "email": "liem29012001@gmail.com",
+            "email": "dragking005@gmail.com",
             "homepage": ""
         }
     ],
